<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">


    <ImageView
        android:id="@+id/IVlogo_home"
        android:layout_width="284dp"
        android:layout_height="616dp"
        android:layout_marginBottom="914dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191"
        app:srcCompat="@drawable/starpify_logo" />

    <TextView
        android:id="@+id/TVappName_home"
        android:layout_width="346dp"
        android:layout_height="172dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/TVdescription_text"
        android:layout_width="379dp"
        android:layout_height="100dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/legend_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BTstart"
        android:layout_width="292dp"
        android:layout_height="74dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/begin_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/TVregister_home"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:layout_marginStart="148dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>