<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/IVlogo_login"
        android:layout_width="123dp"
        android:layout_height="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/starpify_logo" />

    <TextView
        android:id="@+id/TVappName_login"
        android:layout_width="164dp"
        android:layout_height="88dp"
        android:layout_marginStart="157dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/IVlogo_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/TVloginText"
        android:layout_width="315dp"
        android:layout_height="85dp"
        android:layout_marginBottom="73dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/register_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <ImageView
        android:id="@+id/IVuserIcon"
        android:layout_width="67dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        app:srcCompat="@drawable/user_icon" />

    <EditText
        android:id="@+id/IPuserInput"
        android:layout_width="244dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        android:lineSpacingExtra="8sp"
        android:text="User"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toEndOf="@+id/IVuserIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <ImageView
        android:id="@+id/IVpwdicon"
        android:layout_width="44dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497"
        app:srcCompat="@drawable/key_icon" />

    <EditText
        android:id="@+id/IPpassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        android:background="@color/white"
        android:padding="12dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="Contraseña"
        app:layout_constraintStart_toEndOf="@+id/IVpwdicon"
        app:layout_constraintTop_toTopOf="@+id/IPuserInput" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BTlogin"
        android:layout_width="263dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/pink"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/login_button"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22dp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IPpassword"
        app:layout_constraintVertical_bias="0.183"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/TVrecoverpswd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/recovery_password"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704" />

    <Button
        android:id="@+id/BTgoogleLogin"
        android:layout_width="314dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/google_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:cornerRadius="5dp"
        app:icon="@drawable/google_icon"
        app:iconSize="30dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838"
        app:strokeColor="@color/pink"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/TVnoAccountText"
        android:layout_width="169dp"
        android:layout_height="34dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/no_account"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <TextView
        android:id="@+id/TVregister"
        android:layout_width="135dp"
        android:layout_height="37dp"
        android:fontFamily="@font/abyssinica_sil"
        android:text="@string/regist_here"
        android:textAlignment="textStart"
        android:textColor="@color/cyan"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toEndOf="@+id/TVnoAccountText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />


</androidx.constraintlayout.widget.ConstraintLayout>