<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/gray"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/IVlogo_register"
            android:layout_width="146dp"
            android:layout_height="145dp"
            android:src="@drawable/starpify_logo" />

        <TextView
            android:id="@+id/TVdescription_Register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reg_description"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            />


        <TextView
            android:id="@+id/name_label"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:text="Nombre"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"/>


        <EditText
            android:id="@+id/ETName_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Nombre"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp"

            />

        <TextView
            android:id="@+id/lastname_label"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:text="Apellidos"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"/>


        <EditText
            android:id="@+id/ETLastName_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Apellidos"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/email_label"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:text="Email"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/ETemail_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Email"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/tel_label"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:text="Teléfono"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/ETtel_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:text="Teléfono"
            android:background="@color/white"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/password_label"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:text="Contraseña"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"/>


        <EditText
            android:id="@+id/IPpassword_user"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:ems="10"
            android:text="pass"
            android:inputType="textPassword"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/repeatpssw_label"
            android:layout_width="328dp"
            android:layout_height="match_parent"
            android:text="Repite la contraseña"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/IPpassword_user_repeat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:background="@color/white"
            android:text="rptpass"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="15dp"/>
        <CheckBox
            android:id="@+id/CBterms"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/terms"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"/>

        <Button
            android:id="@+id/BTRegister"
            android:layout_width="292dp"
            android:layout_height="74dp"
            android:backgroundTint="@color/pink"
            android:fontFamily="@font/abyssinica_sil"
            android:text="@string/regist_here"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.638"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/TVletter"
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="O"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/TVlogin_link"
            android:layout_width="325dp"
            android:layout_height="match_parent"
            android:text="@string/login_text"
            android:textSize="22dp"
            android:textAlignment="center"
            android:textColor="@color/cyan"
            />



    </LinearLayout>


</ScrollView>